# decision-trees

./: README.md  decision-trees.cabal
app/: Main.hs
src/Data/: Dataset.hs  Histogram.hs
src/Numeric/: Classification.hs  InformationTheory.hs
src/Numeric/Classification/: DecisionTrees.hs  Exceptions.hs  Utils.hs
src/Numeric/Classification/Internal/: Datum.hs
src/Numeric/Classification/Internal/Datum/: Vector.hs
test/: LibSpec.hs
