name:                decision-trees
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/decision-trees
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz gmail
copyright:           2018 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.Classification
                       Numeric.Classification.DecisionTrees
  other-modules:       Numeric.Classification.Internal.Datum
                       Numeric.Classification.Internal.Datum.Vector
                       Numeric.Classification.Exceptions
                       Numeric.InformationTheory
                       Data.Histogram
                       Data.Dataset
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , mwc-random
                     , primitive
                     , vector

executable iris
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , decision-trees
                     , datasets
                     , exceptions
                     , optparse-applicative
                     , vector

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , decision-trees
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/decision-trees
